--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Lab: Card</title>
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/index.css">
-	</head>
-	<body>
 
-	</body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Lab: Card</title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/index.css">
+</head>
+
+<body>
+	<div class="container">
+		<div class="card_container">
+			<div class="card">
+				<div class="card_heart">
+					<div class="card_heartfloat">
+						<img class="bathbed" src="img/heart.svg" alt="heart">
+					</div>
+				</div>
+				<!-- Image part -->
+				<div class="card_head">
+					<div class="card_img"></div>
+				</div>
+				<!-- House details -->
+				<div class="card_body">
+					<!-- Description -->
+					<div class="house_details text_margin">
+						<div class="caps">Detached House<span class="dot"></span> 5y Old</div>
+						<div class="cost">$750,000</div>
+						<div>742 Evergreen Terrace</div>
+					</div>
+					<hr>
+					<!-- Rooms -->
+					<div class="text_margin rooms">
+						<img class="bathbed" src="img/bedroom.svg" alt="bedroom">
+						<span><b>3</b> Bedrooms</span>
+						<img class="bathbed" src="img/bathroom.svg" alt="bedroom">
+						<span><b>2</b> Bathrooms</span>
+					</div>
+					<hr>
+					<!-- Realtor -->
+					<div class="realtor text_margin">
+						<p class="caps">Realtor</p>
+						<div class="realtor-flex">
+							<img src="img/anirudh.png" class="realtor-pic" alt="Image of a Person">
+							<div>
+								<span class="realtor_name"><b>Anirudh Singh</b></span>
+								<div><span>(555) 555-4321</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</body>
+
 </html>
