Fixed flex in bedroom and bathroom

--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
 					<hr>
 					<!-- Rooms -->
 					<div class="text_margin rooms">
-						<img class="bathbed" src="img/bedroom.svg" alt="bedroom">
-						<span><b>3</b> Bedrooms</span>
-						<img class="bathbed" src="img/bathroom.svg" alt="bedroom">
-						<span><b>2</b> Bathrooms</span>
+						<div class="bed">
+							<img class="bathbed" src="img/bedroom.svg" alt="bedroom">
+							<span><b>3</b> Bedrooms</span>
+						</div>
+						<div class="bath">
+							<img class="bathbed" src="img/bathroom.svg" alt="bedroom">
+							<span><b>2</b> Bathrooms</span>
+						</div>						
 					</div>
 					<hr>
 					<!-- Realtor -->
@@ -45,7 +49,7 @@
 						<div class="realtor-flex">
 							<img src="img/anirudh.png" class="realtor-pic" alt="Image of a Person">
 							<div>
-								<span class="realtor_name"><b>Anirudh Singh</b></span>
+								<span class="realtor_name"><b>John Doe</b></span>
 								<div><span>(555) 555-4321</span>
 								</div>
 							</div>
