Added github url for image instead of relative url

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<!-- Image part -->
 				<div class="card_head">
-					<div class="card_img" src="img/house.png"></div>
+					<div class="card_img"></div>
 				</div>
 				<!-- House details -->
 				<div class="card_body">
