Added more button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="card">
 				<div class="card_heart">
 					<div class="card_heartfloat">
-						<img class="bathbed" src="img/heart.svg" alt="heart">
+						<img class="icons" src="img/heart.svg" alt="heart">
 					</div>
 				</div>
 				<!-- Image part -->
@@ -34,23 +34,32 @@
 					<!-- Rooms -->
 					<div class="text_margin rooms">
 						<div class="bed">
-							<img class="bathbed" src="img/bedroom.svg" alt="bedroom">
+							<img class="icons" src="img/bedroom.svg" alt="bedroom">
 							<span><b>3</b> Bedrooms</span>
 						</div>
 						<div class="bath">
-							<img class="bathbed" src="img/bathroom.svg" alt="bedroom">
+							<img class="icons" src="img/bathroom.svg" alt="bedroom">
 							<span><b>2</b> Bathrooms</span>
-						</div>						
+						</div>
 					</div>
 					<hr>
 					<!-- Realtor -->
-					<div class="realtor text_margin">
+					<div class="text_margin">
 						<p class="caps">Realtor</p>
-						<div class="realtor-flex">
-							<img src="img/anirudh.png" class="realtor-pic" alt="Image of a Person">
-							<div>
-								<span class="realtor_name"><b>John Doe</b></span>
-								<div><span>(555) 555-4321</span>
+						<div class="realtor">
+							<div class="realtor-flex">
+								<img src="img/anirudh.png" class="realtor-pic" alt="Image of a Person">
+								<div>
+									<span class="realtor_name"><b>John Doe</b></span>
+									<div><span>(555) 555-4321</span>
+									</div>
+								</div>
+							</div>
+							<!-- More -->
+							<div class="info">
+								<a href="#" class="btn">More Info...</a>
+								<div class="more">
+									<img class="icons" src="img/right-arrow.png" alt="arrow">
 								</div>
 							</div>
 						</div>
@@ -58,7 +67,6 @@
 				</div>
 			</div>
 		</div>
-
 	</div>
 </body>
 
